Final models links added

--- a/deeptesla/udacity.ipynb
+++ b/deeptesla/udacity.ipynb
@@ -211,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import keras\n",
@@ -336,13 +338,15 @@
     "## CNN Training\n",
     "\n",
     "Already trained models can be downloaded from:\n",
-    "* Nvidia-style models: https://drive.google.com/file/d/0B8PJB_fXB-_FYS1oOWotQVBpd2c/view?usp=sharing"
+    "* Nvidia-style models trained only on the first track: https://drive.google.com/file/d/0B8PJB_fXB-_FYS1oOWotQVBpd2c/view?usp=sharing\n",
+    "* Nvidia-style models trained on the second and both tracks: https://drive.google.com/file/d/0B8PJB_fXB-_FMTFTQzFrN2lEVVE/view?usp=sharing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
